@@ -6,8 +6,8 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>154</width>
-    <height>274</height>
+    <width>180</width>
+    <height>350</height>
    </rect>
   </property>
   <property name="windowTitle">
@@ -38,19 +38,6 @@
       </widget>
      </item>
      <item row="0" column="1">
-      <spacer name="horizontalSpacer">
-       <property name="orientation">
-        <enum>Qt::Horizontal</enum>
-       </property>
-       <property name="sizeHint" stdset="0">
-        <size>
-         <width>40</width>
-         <height>20</height>
-        </size>
-       </property>
-      </spacer>
-     </item>
-     <item row="0" column="2">
       <widget class="QToolButton" name="remove">
        <property name="text">
         <string/>
@@ -61,7 +48,7 @@
        </property>
       </widget>
      </item>
-     <item row="0" column="3">
+     <item row="0" column="2">
       <spacer name="horizontalSpacer_2">
        <property name="orientation">
         <enum>Qt::Horizontal</enum>
@@ -74,7 +61,7 @@
        </property>
       </spacer>
      </item>
-     <item row="0" column="4">
+     <item row="0" column="3">
       <widget class="QToolButton" name="up">
        <property name="text">
         <string/>
@@ -96,7 +83,7 @@
        </property>
       </widget>
      </item>
-     <item row="1" column="1" colspan="3">
+     <item row="1" column="1" colspan="2">
       <spacer name="horizontalSpacer_3">
        <property name="orientation">
         <enum>Qt::Horizontal</enum>
@@ -109,7 +96,7 @@
        </property>
       </spacer>
      </item>
-     <item row="1" column="4">
+     <item row="1" column="3">
       <widget class="QToolButton" name="down">
        <property name="text">
         <string/>
@@ -121,6 +108,39 @@
       </widget>
      </item>
     </layout>
+   </item>
+   <item>
+    <widget class="Line" name="line">
+     <property name="orientation">
+      <enum>Qt::Horizontal</enum>
+     </property>
+    </widget>
+   </item>
+   <item>
+    <widget class="QLabel" name="settingPolicyLabel">
+     <property name="text">
+      <string>Propage image settings</string>
+     </property>
+    </widget>
+   </item>
+   <item>
+    <widget class="QComboBox" name="settingPolicy">
+     <item>
+      <property name="text">
+       <string>Never</string>
+      </property>
+     </item>
+     <item>
+      <property name="text">
+       <string>To all following images</string>
+      </property>
+     </item>
+     <item>
+      <property name="text">
+       <string>To all images</string>
+      </property>
+     </item>
+    </widget>
    </item>
   </layout>
  </widget>
